Write acceptance testcase for Dashboard#login and some testing configuration for dashboard-tests.

--- a/modules/dashboard/codeception.yml
+++ b/modules/dashboard/codeception.yml
@@ -8,10 +8,6 @@ settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
-modules:
-    config:
-        Db:
-            dsn: ''
-            user: ''
-            password: ''
-            dump: tests/_data/dump.sql
+
+config:
+    test_entry_url: http://localhost:8080/index-test.php
