--- a/public/web/package.json
+++ b/public/web/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^3.3.6"
+    "animate.css": "^3.5.1",
+    "bootstrap": "^3.3.6",
+    "jquery": "^3.0.0",
+    "swiper": "^3.3.1"
   }
 }
